--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "deploy": "docusaurus deploy",
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
-    "check": "npm run check-spelling && npm run check-markdown && npm run check-js",
+    "check": "npm run check-spelling && npm run check-markdown && npm run check-js && npm run lint",
     "check-js": "biome format",
     "check-markdown": "prettier --log-level warn --check \"docs/**/*.md\" && markdownlint \"docs/**/*.md\" --ignore \"docs/connectors/*.md\"",
     "check-spelling": "cspell --config cspell.jsonc \"docs/**/*.md{x,}\"",
     "format": "npm run format-markdown && npm run format-js",
     "format-js": "biome format --write",
     "format-markdown": "prettier --log-level warn --write \"docs/**/*.md\"",
+    "lint": "biome lint",
     "generate-branded-markdown": "docusaurus generate-branded-markdown",
     "generate-public-connector-docs": "docusaurus generate-connector-docs --public-connectors",
     "postgenerate-public-connector-docs": "npm run format-markdown",
@@ -38,7 +39,7 @@
     "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.3",
+    "@biomejs/biome": "^2.3.2",
     "@docusaurus/faster": "3.9.1",
     "@docusaurus/module-type-aliases": "3.9.1",
     "@docusaurus/tsconfig": "3.9.1",
